--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -66,14 +66,17 @@ $col2: black;
   }
   &__Status-Container {
     position: absolute;
-    top: 0px;
-    width: 100%;
-    background-color: rgba(0,0,0,0.35);
+    bottom: 0px;
+    left: 0px;
+    width: 20%;
+    height: 10vh;
+    background-color: rgba(0,0,0,1);
   }
   &__Minimap-Container {
     position: absolute;
+    right: 0px;
     bottom: 0px;
-    width: 100vw;
+    width: 80%;
     height: 10vh;
   }
 }
