--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -10,6 +10,8 @@
 $col1: white;
 $col2: black;
 
+$minimapRowHeight: 12vh;
+
 @keyframes PulseBlackWhiteBorderRight {
   0% {border-right-color: $col1;}
   50% {border-right-color: $col2;}
@@ -57,8 +59,8 @@ $col2: black;
   }
   &__Leaderboard-Container {
     position: absolute;
-    bottom: 10vh;
-    height: 58px;
+    bottom: $minimapRowHeight;
+    //height: 12vh;
     background-color: rgba(0,0,0,0.45);
     width: 100%;
   }
@@ -67,7 +69,7 @@ $col2: black;
     bottom: 0px;
     left: 0px;
     width: 20%;
-    height: 10vh;
+    height: $minimapRowHeight;
     background-color: rgba(0,0,0,1);
   }
   &__Minimap-Container {
@@ -75,7 +77,7 @@ $col2: black;
     right: 0px;
     bottom: 0px;
     width: 80%;
-    height: 10vh;
+    height: $minimapRowHeight;
   }
 }
 
@@ -83,7 +85,7 @@ $col2: black;
 @media screen and (max-width: 900px) and (orientation:landscape) {
   .InRaceView {
     &__Leaderboard-Container {
-      bottom: 10vh;
+      bottom: $minimapRowHeight;
     }
   }
 }
