--- a/tourjs-react/src/Components/InRaceViewStatus.scss
+++ b/tourjs-react/src/Components/InRaceViewStatus.scss
@@ -12,17 +12,41 @@
 }
 
 .InRaceViewStatus {
+  &__Outer-Container {
+    display: flex;
+    flex-direction: row;
+    //font-size: 100%;
+  }
   &__Container {
+    flex: 1 1 0px;
     display: flex;
     flex-direction: column;
-    //font-size: 100%;
+  }
+  &__TextAlignRight {
+    text-align:right;
+    flex: 1 1 auto;
   }
   &__InfoChunk {
     color: white;
     flex: 1 1 0px;
-    font-size: 2.5vh;
+    font-size: 3vh;
     text-align: left;
-    padding-left: 10%
+    padding-left: 10%;
+    overflow: visible;
+    z-index: 1;
+    flex: 1 1 auto;
+
+    &.Flex {
+      display: flex;
+      flex-direction:row;
+    }
+    &.FlexGrow {
+      flex: 1 1 auto;
+    }
+    
+  }
+  &__RightSide {
+    text-align: right;
   }
   &__Connect {
     text-shadow: white 0px 0px 6px;
@@ -39,23 +63,16 @@
       padding: 2px;
     }
     
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 3.5vh;
-    height: 3.5vh;
     border-radius: 50%;
     font-size: 2.5vh;
     text-align: center;
   }
   &__Progress {
-    width: 6vh;
-    height: 6vh;
+    width: 100%;
+    height: 3vh;
   }
   &__Handicap {
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
+    flex: 1 1 auto;
     overflow: hidden;
     font-size: 1.2vw;
     color: rgba(255,255,255,0.3);
