--- a/tourjs-react/src/Components/InRaceViewStatus.scss
+++ b/tourjs-react/src/Components/InRaceViewStatus.scss
@@ -13,25 +13,25 @@
 
 .InRaceViewStatus {
   &__Outer-Container {
-    display: flex;
-    flex-direction: row;
-    //font-size: 100%;
+    display: grid;
+    row-gap: 1%;
   }
-  &__Container {
-    flex: 1 1 0px;
-    display: flex;
-    flex-direction: column;
-  }
-  &__TextAlignRight {
-    text-align:right;
-    flex: 1 1 auto;
-  }
-  &__InfoChunk {
+  &__Wattage {
     color: white;
     flex: 1 1 0px;
-    font-size: 3vh;
+    font-size: 3vw;
     text-align: left;
-    padding-left: 10%;
+    padding-left: 5%;
+    overflow: visible;
+    z-index: 1;
+    flex: 1 1 auto;
+  }
+  &__Hill {
+    color: white;
+    flex: 1 1 0px;
+    font-size: 2.5vh;
+    text-align: bottom;
+    padding-left: 5%;
     overflow: visible;
     z-index: 1;
     flex: 1 1 auto;
@@ -45,12 +45,26 @@
     }
     
   }
-  &__RightSide {
-    text-align: right;
+  &__Progress {
+    border-radius: 10px;
+    width: 80%;
+    height: 2vh;
   }
+  &__Bpm {
+    color: white;
+    flex: 1 1 0px;
+    font-size: 3vh;
+    text-align: left;
+    padding-left: 10%;
+    overflow: visible;
+    z-index: 1;
+    flex: 1 1 auto;
+  }
+
+  
   &__Connect {
     text-shadow: white 0px 0px 6px;
-
+    justify-self: right;
     animation: none;
     &.NoPower {
       animation-name: PulseBlueRed;
@@ -67,16 +81,14 @@
     font-size: 2.5vh;
     text-align: center;
   }
-  &__Progress {
-    width: 100%;
-    height: 3vh;
-  }
+  
   &__Handicap {
     flex: 1 1 auto;
     overflow: hidden;
-    font-size: 1.2vw;
+    font-size: 2vh;
+    text-align: right;
     color: rgba(255,255,255,0.3);
-    display: inline-block;
+    display: inline;
     border-radius: 0.4vh;
     padding: 2px;
     transition: color 0.5s, background-color 0.5s;
