--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -53,6 +53,12 @@ $minimapRowHeight: 12vh;
       animation-iteration-count: infinite;
     }
   }
+  &__Children {
+    position: absolute;
+    top:0px;
+    left:0px;
+    background-color:transparent;
+  }
   &__Canvas {
     width: 100%;
     height: 100%;
