--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -63,6 +63,13 @@ $minimapRowHeight: 12vh;
     width: 100%;
     height: 100%;
   }
+  &__OverlayCanvas {
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    position:absolute;
+  }
   &__Leaderboard-Container {
     position: absolute;
     bottom: $minimapRowHeight;
